--- a/views/addanimal.ejs
+++ b/views/addanimal.ejs
@@ -352,8 +352,7 @@
                                                                         <span> Drop image here or click to upload.
                                                                         </span>
                                                                     </label>
-                                                                    <input type="file" id="file-ip-1" accept="image/*"
-                                                                        onchange="showPreview(event);">
+                                                                    <input type="file" name="an_pic" id="file-ip-1" accept="image/*" onchange="showPreview(event)" required>
                                                                     <div class="preview">
                                                                         <img id="file-ip-1-preview" src="#" alt="img">
                                                                     </div>
@@ -382,7 +381,7 @@
                                                                 placeholder="尺寸" required>
                                                         </div>
                                                         <div class="form-group">
-                                                            <select class="form-control form-select" required>
+                                                            <select name="an_sex" class="form-control form-select" required>
                                                                 <option hidden></option>
                                                                 <option>母</option>
                                                                 <option>公</option>
@@ -407,7 +406,7 @@
                                                 <div class="row">
                                                     <div class="col-xl-4">
                                                         <div class="form-group">
-                                                            <input type="file" name="an_pic" required>
+                                                            
                                                         </div>
                                                     </div>
                                                     <div class="col-xl-8">
@@ -429,6 +428,16 @@
                             </div>
                         </div>
                     </form>
+                    <script>
+                        function showPreview(event){
+                        if(event.target.files.length > 0){
+                            var src = URL.createObjectURL(event.target.files[0]);
+                            var preview = document.getElementById("file-ip-1-preview");
+                            preview.src = src;
+                            preview.style.display = "block";
+                        }
+                        }
+                    </script>
                     <!--  <div class="row">
                         <div class="col-lg-12">
                             <div class="card">
