--- a/views/addanimal.ejs
+++ b/views/addanimal.ejs
@@ -415,10 +415,14 @@
                                                                 placeholder="故事內容:" rows="4" required></textarea>
                                                         </div>
                                                         <div class="form-group text-right">
-
-                                                            <button type="submit"
+                                                            <button type="submit" onclick="return confirmAdd()"
                                                                 class="btn btn-primary float-end">新增動物</button>
                                                         </div>
+                                                        <script>
+                                                            function confirmAdd(){
+                                                                alert("新增成功");
+                                                            }
+                                                        </script>
                                                     </div>
                                                 </div>
                                             </form>
