--- a/views/membereditor.ejs
+++ b/views/membereditor.ejs
@@ -126,7 +126,7 @@
 
                     <!--<div class="row">-->
                  <div class="col-sm my-2">
-                        <img src="images/01-banner.jpg" class="img-fluid">
+                     <!--   <img src="images/01-banner.jpg" class="img-fluid">-->
                     </div>
                     <div class="col-sm my-2">
                         <img src="" class="img-fluid">
