--- a/public/assets/main/css/style.css
+++ b/public/assets/main/css/style.css
@@ -487,12 +487,12 @@ table.dataTable.display tbody td {
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    display: inherit;
+    display: flex;
     margin-bottom: 10px;
     height: 90px;
     width: 90px; }
     .list-doctors .timeline .timeline-panel .media img {
-      width: 100%; }
+      width: 100%;}
   .list-doctors .timeline .timeline-panel .media-body a h4 {
     color: #2b2b2b;
     font-size: 15px;
