--- a/views/empindex.ejs
+++ b/views/empindex.ejs
@@ -48,7 +48,7 @@
                          <!-- <li> <a href="doctor-profile.html">Doctors Profile</a> </li> -->
                         </ul>
                     </li>
-                    <li class="has-submenu">
+                    <!--<li class="has-submenu">
                         <a href="#" class="has-arrow mm-collapsed">
                             <i class="fas fa-users"></i>
                             <span class="nav-label">活動</span>
@@ -57,6 +57,12 @@
                             <li><a href="newevent">新增活動</a></li>
                             <li><a href="allevent">全部活動</a></li>
                         </ul>
+                    </li>-->
+                    <li class="has-submenu">
+                        <a href="adopterdetail">
+                            <i class="fas fa-calendar-plus"></i>
+                            <span class="nav-label">領養人資訊</span>
+                        </a>
                     </li>
                     <li class="has-submenu">
                         <a href="memberadmin">
