管理員介面(領養人資訊)

--- a/views/memberadmin.ejs
+++ b/views/memberadmin.ejs
@@ -47,7 +47,7 @@
                       <!--  <li> <a href="doctor-profile.html">動物資料</a> </li> -->
                         </ul>
                     </li>
-                    <li class="has-submenu">
+                    <!--<li class="has-submenu">
                         <a href="#" class="has-arrow mm-collapsed">
                             <i class="fas fa-users"></i>
                             <span class="nav-label">活動</span>
@@ -56,6 +56,12 @@
                             <li><a href="newevent">新增活動</a></li>
                             <li><a href="allevent">全部活動</a></li>
                         </ul>
+                    </li>-->
+                    <li class="has-submenu">
+                        <a href="adopterdetail">
+                            <i class="fas fa-calendar-plus"></i>
+                            <span class="nav-label">領養人資訊</span>
+                        </a>
                     </li>
                     <li class="has-submenu">
                         <a href="memberadmin">
