路徑+註冊email/pw格式+登入pw格式修改

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -88,9 +88,9 @@ shrink-to-fit=no"
     <p></p>
     *暱稱: <input type="text" name="m_nickname" required>
     <p></p>
-    *信箱: <input type="text" name="m_email" required>
+    *信箱: <input type="email" name="m_email" required>
     <p></p>
-    *密碼: <input type="text" name="m_password" required>
+    *密碼: <input type="password" name="m_password" required>
     <p></p>
     電話: <input type="text" name="m_phone" oninput = "value=value.replace(/[^\d]/g,'')">
     <p></p>
