--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,7 +20,7 @@
                     <input class="form-control" placeholder="E-mail" name="m_email" type="text">
                 </div>
                 <div class="form-group">
-                    <input class="form-control" placeholder="Password" name="m_password" type="text">
+                    <input class="form-control" placeholder="Password" name="m_password" type="password">
                 </div>
                 <!--<div class="checkbox">
                     <label>
