--- a/views/recognition.ejs
+++ b/views/recognition.ejs
@@ -76,6 +76,9 @@
           <input type="file" name="pic_file" accept="image/jpeg, image/png" required="required">
           <input type="submit" value="確定">
         </form>
+        <form action="/recognitionAns" enctype="multipart/form-data" method="get" name="form">
+          <input type="submit" value="查看結果">
+        </form>
         <a class="btn btn-outline-light" href="/" role="button">回主頁</a>
     <!--<ul class="drop-down-menu">
       <li><a href="#">開始上傳</a> 
